force-app/src/objects/ffcmutil__ProcessLogInfo__c.object
<CustomObject>
    <fields>
        <fullName>ffcmutil__CashMatchingHistoryLogInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Matching History Log Info</label>
        <referenceTo>ffcmutil__CashMatchingHistoryLogInfo__c</referenceTo>
        <relationshipLabel>Process Logs Info</relationshipLabel>
        <relationshipName>ProcessLogsInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffcmutil__MatchingReferenceLogInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matching Reference Log Info</label>
        <referenceTo>ffcmutil__MatchingReferenceLogInfo__c</referenceTo>
        <relationshipLabel>Process Logs Info</relationshipLabel>
        <relationshipName>ProcessLogsInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffcmutil__TransactionLineItemLogInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item Log Info</label>
        <referenceTo>ffcmutil__TransactionLineItemLogInfo__c</referenceTo>
        <relationshipLabel>Process Logs Info</relationshipLabel>
        <relationshipName>ProcessLogsInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Process Log Info</label>
    <nameField>
        <displayFormat>LOGINF{000000}</displayFormat>
        <label>Process Log Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Logs Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>